--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,22 @@
     tools:context="com.example.palchenwangchuk.androidproject1.MainActivity">
 
 
+    <RelativeLayout
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@color/header_1"
+        android:gravity="center">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/head_dimension"
+            android:text="@string/header"
+            android:textColor="@color/header_2"
+            android:textSize="20sp" />
+    </RelativeLayout>
 
     <include layout="@layout/content_main" />
 
